Add ConfigFIleParser,modify file reader class ,start working with settings form

--- a/stend.csproj
+++ b/stend.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Error.cs" />
     <Compile Include="FileReader.cs" />
     <Compile Include="FileWriter.cs" />
+    <Compile Include="ConfigFileParser.cs" />
     <Compile Include="InputTable.cs">
       <SubType>Form</SubType>
     </Compile>
