--- a/stend.csproj
+++ b/stend.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
+    <Compile Include="Outputs.cs" />
     <Compile Include="Sensor.cs" />
     <Compile Include="SettingsForm.cs">
       <SubType>Form</SubType>
